hphp/test/quick/typedef_duplicate.php.expectf
HipHop Fatal error: The type MyType is already defined to a different class (MyClass) in %s on line 10
